snapshots/care/data4life/hc-util-sdk-kmp/error/1.14.0-SNAPSHOT/error-1.14.0-20220831.180107-1-sources.jar.sha1
43cc748c0a077a920831cf4fa5c59bd40a5f09c0